# Rt-Async-AMP

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  STATUS.md  amp.config  amp.toml  run.sh  rust-toolchain.toml
.cargo/: config.toml
apps/rt-async-app/: Cargo.toml  build.rs  memory.x
apps/rt-async-app/src/: intercom.rs  ipc_wait.rs  lib.rs  uart_wait.rs
apps/rt-async-k3/: Cargo.toml  build.rs
apps/rt-async-k3/.cargo/: config.toml
apps/user-test-ipc/: Cargo.toml
apps/user-test-ipc/src/: main.rs
docs/: IPC-DESIGN.md  architecture.html  convert.mjs  package-lock.json  package.json
docs/assets/: arch-overview.excalidraw  architecture.css  busy-state-machine.excalidraw  channel-state.excalidraw  comm-flow.excalidraw  executor-2.excalidraw  executor-flow.excalidraw  memory-layout.excalidraw  module-deps.excalidraw  process-result.excalidraw  rpc-channels.excalidraw  rpc-modes.excalidraw  shm-structure.excalidraw  task-state-machine.excalidraw
docs/superpowers/plans/: 2026-07-03-k3-rt24-rcpu1-minimal.md
docs/superpowers/specs/: 2026-07-03-k3-rt24-rcpu1-minimal-design.md
firmware/msip_probe/: .gitignore  Makefile  README.md  main.c  msip_probe.ld  startup.S
its/: k3-clock.h  k3-pinctrl.h  qemu-virt-amp.dts  rt-async-k3.dtb  rt-async-k3.dts  rt-async-qemu-virt-amp.dts
modules/axplat-riscv64-qemu-virt/: Cargo.toml  axconfig.toml  axconfig.toml.in
modules/axplat-riscv64-qemu-virt/src/: boot.rs  console.rs  init.rs  irq.rs  lib.rs  mem.rs  power.rs  time.rs
modules/chip-k3-rt24/: Cargo.toml  build.rs
modules/chip-k3-rt24/src/: clint_k3.rs  clock.rs  handshake.rs  lib.rs  mailbox.rs  pinctrl_k3.rs  plic_k3.rs  pxa_uart.rs  reset_stub.rs  uart.rs
modules/chip-qemu-virt-rt/: Cargo.toml  build.rs
modules/chip-qemu-virt-rt/src/: lib.rs
modules/ov-rpc/: Cargo.toml  README.md
modules/ov-rpc/src/: client.rs  lib.rs  macros.rs  server.rs
modules/ov-rpc/tests/: rpc.rs
patches/: opensbi-amp.patch  qemu-uart1.patch  qemu-virt-uart1.patch
scripts/: k3-build-minimal.sh
scripts/flash/: .gitignore  README.md  esos_k3_com260_ifx.its  flash.conf  k3-console.py  k3-flash.sh  k3-pack-itb.sh
scripts/flash/payloads/: k3_rt240_com260_ifx.dtb  k3_rt241_com260_ifx.dtb  rt24_os0_rcpu.elf
user-apps/user-test-ipc/: Cargo.toml  build.rs
user-apps/user-test-ipc/src/: main.rs
user-apps/user-test-rpc/: Cargo.toml
user-apps/user-test-rpc/src/: main.rs
user-apps/user-test-sched/: Cargo.toml
user-apps/user-test-sched/.cargo/: config.toml
user-apps/user-test-sched/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build.rs  config.rs  install.rs  main.rs  run.rs  setup.rs  util.rs
