[workspace]
members = [
    "modules/chip-qemu-virt-rt",
    "modules/ov-rpc",
    "apps/rt-async-app",
    "user-apps/user-test-ipc",
    "user-apps/user-test-rpc",
    "user-apps/user-test-sched",
    "xtask",
]
resolver = "3"

[workspace.dependencies]
ov-channels = { version = "0.2.0", default-features = false, features = ["critical-section", "flags"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.1", default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
