[workspace]
members = [
    "modules/chip-qemu-virt-rt",
    "modules/chip-k3-rt24",
    "modules/ov-rpc",
    "apps/rt-async-app",
    "apps/rt-async-k3",
    "user-apps/user-test-ipc",
    "user-apps/user-test-rpc",
    "user-apps/user-test-sched",
    "xtask",
]
resolver = "3"

[workspace.dependencies]
ov-channels = { version = "0.2.0", default-features = false, features = ["critical-section", "flags"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.1", default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
