[package]
name = "rt-async-app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
executor = { path = "../../rt-async/modules/executor" }
platform = { path = "../../rt-async/modules/platform" }
futures = { path = "../../rt-async/modules/futures" }
chip-qemu-virt-rt = { path = "../../modules/chip-qemu-virt-rt" }
ov-channels = { workspace = true }
ov-rpc = { path = "../../modules/ov-rpc" }
serde = { workspace = true }
postcard = { workspace = true }
fugit = "0.4"
log = { version = "0.4", default-features = false }
portable-atomic = { version = "1", default-features = false }

[build-dependencies]
xtask = { path = "../../xtask" }

[features]
default = ["riscv64"]
riscv64 = ["platform/riscv64"]

[[bin]]
name = "demo"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
