[package]
name = "rt-async-k3"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
executor = { path = "../../rt-async/modules/executor" }
platform = { path = "../../rt-async/modules/platform" }
chip-k3-rt24 = { path = "../../modules/chip-k3-rt24" }
log = { version = "0.4", default-features = false }

[build-dependencies]
xtask = { path = "../../xtask" }

[features]
default = ["riscv64"]
riscv64 = ["platform/riscv64"]

[[bin]]
name = "minimal"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
