[package]
name = "chip-qemu-virt-rt"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
platform = { path = "../../rt-async/modules/platform" }
extern-trait = "0.4.3"
riscv = "0.16.0"
fdt-parser = "0.4.19"
log = "0.4"
tock-registers = "0.10"

[build-dependencies]
xtask = { path = "../../xtask" }
