[package]
name = "user-test-ipc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ov-channels = { version = "0.1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", default-features = false }
libc = "0.2.186"

[profile.release]
opt-level = "s"
lto = true
strip = true
